--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,7 @@
 **/.ipynb_checkpoints
 **/__pycache__/
 **/training_data/
-./notebooks/files/output/
+notebooks/files/output/
+data/test_data/FrogID_Private_data_EY_Feb2022.csv
+data/test_data/test_dataset_summary.ipynb
+data/test_data/frog_map_test.html
