training set and dataset_summary complete

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ data/test_data/
 data/all_training_data/
 data/training_data/
 data/training_set_all.zip
+data/all_data.zip
+data/all_data/
+data/training_set_query_all_frogs.json
+data/training_set_query_select_frogs.json
+data/untitled.py
