--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -1,8 +1,8 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=1_llvm
+_libgcc_mutex=0.1=main
+_openmp_mutex=4.5=1_gnu
 affine=2.3.0=pyhd3eb1b0_0
 aiohttp=3.8.1=py38h7f8727e_0
 aiosignal=1.2.0=pyhd3eb1b0_0
@@ -11,119 +11,121 @@ argon2-cffi-bindings=21.2.0=py38h7f8727e_0
 asciitree=0.3.3=py_2
 async-timeout=4.0.1=pyhd3eb1b0_0
 attrs=21.4.0=pyhd3eb1b0_0
+azure-core=1.14.0=pyhd3eb1b0_0
+azure-identity=1.8.0=pyhd8ed1ab_0
+azure-storage-blob=12.9.0=pyhd3eb1b0_0
 backcall=0.2.0=pyhd3eb1b0_0
-blas=2.106=openblas
+blas=1.0=mkl
 bleach=4.1.0=pyhd3eb1b0_0
-blosc=1.21.0=h9c3ff4c_0
-boost-cpp=1.74.0=h6cacc03_7
+blinker=1.4=py38h06a4308_0
+bokeh=2.4.2=py38h06a4308_0
+boost-cpp=1.74.0=h312852a_4
 bottleneck=1.3.2=py38heb32a55_1
 brotli=1.0.9=he6710b0_2
 brotlipy=0.7.0=py38h27cfd23_1003
 bzip2=1.0.8=h7b6447c_0
 c-ares=1.18.1=h7f8727e_0
-ca-certificates=2021.10.26=h06a4308_2
+ca-certificates=2022.2.1=h06a4308_0
 cairo=1.16.0=hf32fb01_1
 certifi=2021.10.8=py38h06a4308_2
 cffi=1.15.0=py38hd667e15_1
-cfitsio=4.0.0=h9a35b8e_0
+cfitsio=3.470=hf0d0db6_6
 charset-normalizer=2.0.4=pyhd3eb1b0_0
-click=8.0.3=pyhd3eb1b0_0
+click=7.1.2=pyhd3eb1b0_0
 click-plugins=1.1.1=pyhd3eb1b0_0
 cligj=0.7.2=py38h06a4308_0
 cloudpickle=2.0.0=pyhd3eb1b0_0
+colorcet=2.0.6=pyhd3eb1b0_0
 contextily=1.2.0=pyhd8ed1ab_0
-cryptography=36.0.0=py38h9ce1e76_0
-curl=7.81.0=h2574ce0_0
+cryptography=3.4.8=py38hd23ed53_0
+curl=7.80.0=h7f8727e_0
 cycler=0.11.0=pyhd3eb1b0_0
+cytoolz=0.11.0=py38h7b6447c_0
+dask=2021.10.0=pyhd3eb1b0_0
 dask-core=2021.10.0=pyhd3eb1b0_0
+datashader=0.13.0=pyhd3eb1b0_1
+datashape=0.5.4=py38h06a4308_1
 debugpy=1.5.1=py38h295c915_0
 decorator=5.1.1=pyhd3eb1b0_0
 defusedxml=0.7.1=pyhd3eb1b0_0
+distributed=2021.10.0=py38h06a4308_0
 entrypoints=0.3=py38_0
-expat=2.4.6=h27087fc_0
+expat=2.4.4=h295c915_0
 fasteners=0.16.3=pyhd3eb1b0_0
-font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
-font-ttf-inconsolata=2.001=hcb22688_0
-font-ttf-source-code-pro=2.030=hd3eb1b0_0
-font-ttf-ubuntu=0.83=h8b1ccd4_0
-fontconfig=2.13.96=ha180cfb_0
-fonts-anaconda=1=h8fa9717_0
-fonts-conda-ecosystem=1=hd3eb1b0_0
+fontconfig=2.13.1=hba837de_1005
 fonttools=4.25.0=pyhd3eb1b0_0
 freetype=2.11.0=h70c0345_0
 freexl=1.0.6=h27cfd23_0
 frozenlist=1.2.0=py38h7f8727e_0
 fsspec=2022.1.0=pyhd3eb1b0_0
+gdal=3.2.2=py38h507a4fd_7
 geographiclib=1.52=pyhd8ed1ab_0
 geopy=2.2.0=pyhd8ed1ab_0
-geos=3.10.2=h9c3ff4c_0
-geotiff=1.7.0=h6593c0a_6
+geos=3.9.1=h295c915_0
+geotiff=1.6.0=h4f31c25_6
 gettext=0.21.0=hf68c758_0
 giflib=5.2.1=h7b6447c_0
-glib=2.70.2=h780b84a_4
-glib-tools=2.70.2=h780b84a_4
+glib=2.68.2=h36276a3_0
 hdf4=4.2.15=h10796ff_3
-hdf5=1.12.1=nompi_h2750804_103
-icu=69.1=h9c3ff4c_0
+hdf5=1.10.6=nompi_h7c3c948_1111
+heapdict=1.0.1=pyhd3eb1b0_0
+icu=68.1=h2531618_0
 idna=3.3=pyhd3eb1b0_0
 importlib-metadata=4.8.2=py38h06a4308_0
 importlib_metadata=4.8.2=hd3eb1b0_0
+intel-openmp=2021.4.0=h06a4308_3561
 ipykernel=6.4.1=py38h06a4308_1
 ipython=7.31.1=py38h06a4308_0
 ipython_genutils=0.2.0=pyhd3eb1b0_1
+isodate=0.6.0=pyhd3eb1b0_1
 jbig=2.1=hdba287a_0
 jedi=0.18.1=py38h06a4308_1
 jinja2=3.0.2=pyhd3eb1b0_0
 joblib=1.1.0=pyhd3eb1b0_0
-jpeg=9e=h7f98852_0
+jpeg=9d=h7f8727e_0
 json-c=0.15=h98cffda_0
 jsonschema=3.2.0=pyhd3eb1b0_2
 jupyter_client=7.1.2=pyhd3eb1b0_0
 jupyter_core=4.9.1=py38h06a4308_0
 jupyterlab_pygments=0.1.2=py_0
-kealib=1.4.14=h87e4c3c_3
+kealib=1.4.14=hb50703a_1
 kiwisolver=1.3.2=py38h295c915_0
 krb5=1.19.2=hac12032_0
 lcms2=2.12=h3be6417_0
 ld_impl_linux-64=2.35.1=h7274673_9
-lerc=3.0=h295c915_0
-libblas=3.9.0=6_openblas
-libcblas=3.9.0=6_openblas
-libcurl=7.81.0=h2574ce0_0
+lerc=2.2.1=h2531618_0
+libcurl=7.80.0=h0b77cf5_0
 libdap4=3.20.6=hd7c4107_2
-libdeflate=1.8=h7f8727e_5
+libdeflate=1.7=h27cfd23_5
 libedit=3.1.20210910=h7f8727e_0
 libev=4.33=h7f8727e_1
-libffi=3.4.2=h295c915_2
-libgcc-ng=11.2.0=h1d223b6_12
-libgdal=3.4.1=he20be3c_4
-libgfortran-ng=11.2.0=h69a702a_12
-libgfortran5=11.2.0=h5c6108e_12
-libglib=2.70.2=h174f98d_4
+libffi=3.3=he6710b0_2
+libgcc-ng=9.3.0=h5101ec6_17
+libgdal=3.2.2=h8f005ca_7
+libgfortran-ng=7.5.0=ha8ba4b0_17
+libgfortran4=7.5.0=ha8ba4b0_17
+libglib=2.68.2=h3e27bee_0
+libgomp=9.3.0=h5101ec6_17
 libiconv=1.16=h516909a_0
 libkml=1.3.0=h238a007_1014
-liblapack=3.9.0=6_openblas
-liblapacke=3.9.0=6_openblas
-libnetcdf=4.8.1=nompi_hb3fd0d9_101
+libllvm11=11.1.0=h3826bc1_0
+libnetcdf=4.8.0=nompi_hcd642e3_103
 libnghttp2=1.46.0=hce63b2e_0
-libnsl=2.0.0=h7f98852_0
-libopenblas=0.3.12=pthreads_h4812303_1
 libpng=1.6.37=hbc83047_0
-libpq=14.2=hd57d9b9_0
-librttopo=1.1.0=hf69c175_9
+libpq=13.3=hd57d9b9_0
+librttopo=1.1.0=h1185371_6
 libsodium=1.0.18=h7b6447c_0
-libspatialite=5.0.1=h0e567f8_14
-libssh2=1.10.0=ha56f1ee_2
-libstdcxx-ng=11.2.0=he4da1e4_12
-libtiff=4.3.0=h6f004c6_2
+libspatialite=5.0.1=h8694cbe_5
+libssh2=1.9.0=h1ba5d50_1
+libstdcxx-ng=9.3.0=hd4cf53a_17
+libtiff=4.3.0=hf544144_1
 libuuid=2.32.1=h7f98852_1000
 libwebp=1.2.2=h55f646e_0
 libwebp-base=1.2.2=h7f8727e_0
 libxcb=1.14=h7b6447c_0
-libxml2=2.9.12=h885dcf4_1
-libzip=1.8.0=h4de3113_1
-libzlib=1.2.11=h36c2ea0_1013
-llvm-openmp=13.0.1=hf817b99_0
+libxml2=2.9.12=h72842e0_0
+libzip=1.8.0=h4de3113_0
+llvmlite=0.37.0=py38h295c915_1
 locket=0.2.1=py38h06a4308_1
 lz4-c=1.9.3=h295c915_1
 markupsafe=2.0.1=py38h27cfd23_0
@@ -131,8 +133,16 @@ matplotlib-base=3.5.1=py38ha18d171_0
 matplotlib-inline=0.1.2=pyhd3eb1b0_2
 mercantile=1.2.1=pyhd8ed1ab_0
 mistune=0.8.4=py38h7b6447c_1000
+mkl=2021.4.0=h06a4308_640
+mkl-service=2.4.0=py38h7f8727e_0
+mkl_fft=1.3.1=py38hd3c417c_0
+mkl_random=1.2.2=py38h51133e4_0
+msal=1.17.0=pyhd8ed1ab_0
+msal_extensions=0.3.1=pyhd8ed1ab_0
 msgpack-python=1.0.2=py38hff7bd54_1
+msrest=0.6.21=pyhd3eb1b0_0
 multidict=5.2.0=py38h7f8727e_2
+multipledispatch=0.6.0=py38_0
 munkres=1.1.4=py_0
 nb_conda_kernels=2.3.1=py38h06a4308_0
 nbclient=0.5.11=pyhd3eb1b0_0
@@ -140,88 +150,100 @@ nbconvert=6.3.0=py38h06a4308_0
 nbformat=5.1.3=pyhd3eb1b0_0
 ncurses=6.3=h7f8727e_2
 nest-asyncio=1.5.1=pyhd3eb1b0_0
+noise=1.2.2=py38h1e0a361_1001
 notebook=6.4.8=py38h06a4308_0
-nspr=4.33=h295c915_0
-nss=3.74=h0370c37_0
+numba=0.54.1=py38h51133e4_0
 numcodecs=0.9.1=py38h295c915_0
-numexpr=2.8.1=py38hecfb737_0
-numpy=1.21.2=py38hd8d4704_0
-numpy-base=1.21.2=py38h2b8c604_0
-olefile=0.46=pyhd3eb1b0_0
+numexpr=2.8.1=py38h6abb31d_0
+numpy=1.20.3=py38hf144106_0
+numpy-base=1.20.3=py38h74d4b33_0
+oauthlib=3.2.0=pyhd3eb1b0_0
 openjpeg=2.4.0=h3ad879b_0
 openssl=1.1.1m=h7f8727e_0
 packaging=21.3=pyhd3eb1b0_0
 pandas=1.4.1=py38h295c915_0
 pandocfilters=1.5.0=pyhd3eb1b0_0
+param=1.12.0=pyhd3eb1b0_0
 parso=0.8.3=pyhd3eb1b0_0
 partd=1.2.0=pyhd3eb1b0_0
 pcre=8.45=h295c915_0
 pexpect=4.8.0=pyhd3eb1b0_3
 pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=8.4.0=py38h5aabda8_0
+pillow=9.0.1=py38h22f2fdc_0
 pip=21.2.4=py38h06a4308_0
 pixman=0.40.0=h7f8727e_1
 planetary-computer=0.4.5=pyhd8ed1ab_0
-poppler=22.01.0=ha39eefc_0
+poppler=21.03.0=h93df280_0
 poppler-data=0.4.11=h06a4308_0
-postgresql=14.2=h2510834_0
-proj=8.2.1=ha227179_0
+portalocker=2.3.0=py38h06a4308_0
+postgresql=13.3=h2510834_0
+proj=8.0.1=h1217e81_0
 prometheus_client=0.13.1=pyhd3eb1b0_0
 prompt-toolkit=3.0.20=pyhd3eb1b0_0
+psutil=5.8.0=py38h27cfd23_1
 ptyprocess=0.7.0=pyhd3eb1b0_2
 pycparser=2.21=pyhd3eb1b0_0
+pyct=0.4.6=py38h06a4308_0
+pyct-core=0.4.6=pyhd3eb1b0_0
 pydantic=1.9.0=py38h7f8727e_0
 pygments=2.11.2=pyhd3eb1b0_0
-pyopenssl=22.0.0=pyhd3eb1b0_0
+pyjwt=2.1.0=py38h06a4308_0
+pyopenssl=21.0.0=pyhd3eb1b0_1
 pyparsing=3.0.4=pyhd3eb1b0_0
-pyproj=3.3.0=py38h6de3afc_0
+pyproj=3.1.0=py38h03a1999_3
 pyrsistent=0.18.0=py38heee7806_0
 pysocks=1.7.1=py38h06a4308_0
 pystac=1.2.0=pyhd8ed1ab_0
 pystac-client=0.3.2=pyhd8ed1ab_0
-python=3.8.12=ha38a3c6_3_cpython
+python=3.8.10=h12debd9_8
 python-dateutil=2.8.2=pyhd3eb1b0_0
 python_abi=3.8=2_cp38
 pytz=2021.3=pyhd3eb1b0_0
 pyyaml=6.0=py38h7f8727e_1
 pyzmq=22.3.0=py38h295c915_2
-rasterio=1.2.10=py38hc13c803_4
+rasterio=1.2.6=py38ha9903f8_1
 readline=8.1.2=h7f8727e_1
 requests=2.27.1=pyhd3eb1b0_0
-rioxarray=0.10.1=pyhd8ed1ab_0
+requests-oauthlib=1.3.0=py_0
+rioxarray=0.10.2=pyhd8ed1ab_0
 scikit-learn=1.0.2=py38h51133e4_1
-scipy=1.8.0=py38h56a6a73_1
+scipy=1.7.3=py38hc147768_0
 send2trash=1.8.0=pyhd3eb1b0_1
 setuptools=58.0.4=py38h06a4308_0
-shapely=1.8.0=py38h596eeab_5
+shapely=1.7.1=py38haeee4fe_5
 six=1.16.0=pyhd3eb1b0_1
 snuggs=1.4.7=pyhd3eb1b0_0
+sortedcontainers=2.4.0=pyhd3eb1b0_0
 sqlite=3.37.2=hc218d9a_0
 stackstac=0.3.1=pyhd8ed1ab_0
+tbb=2021.5.0=hd09550d_0
+tblib=1.7.0=pyhd3eb1b0_0
 terminado=0.13.1=py38h06a4308_0
 testpath=0.5.0=pyhd3eb1b0_0
 threadpoolctl=2.2.0=pyh0d69192_0
-tiledb=2.6.3=h1e4a385_0
+tiledb=2.3.3=hc47dd91_1
 tk=8.6.11=h1ccaba5_0
 toolz=0.11.2=pyhd3eb1b0_0
 tornado=6.1=py38h27cfd23_0
 traitlets=5.1.1=pyhd3eb1b0_0
 typing-extensions=3.10.0.2=hd3eb1b0_0
 typing_extensions=3.10.0.2=pyh06a4308_0
-tzcode=2021e=h7f98852_0
+tzcode=2021a=h7f98852_2
 tzdata=2021e=hda174b7_0
 urllib3=1.26.8=pyhd3eb1b0_0
 wcwidth=0.2.5=pyhd3eb1b0_0
 webencodings=0.5.1=py38_1
 wheel=0.37.1=pyhd3eb1b0_0
 xarray=0.20.1=pyhd3eb1b0_1
-xerces-c=3.2.3=h8ce2273_4
+xarray-spatial=0.3.2=pyhd8ed1ab_1
+xerces-c=3.2.3=h9d8b166_2
 xyzservices=2022.2.0=pyhd8ed1ab_0
 xz=5.2.5=h7b6447c_0
 yaml=0.2.5=h7b6447c_0
 yarl=1.6.3=py38h27cfd23_0
 zarr=2.8.1=pyhd3eb1b0_0
 zeromq=4.3.4=h2531618_0
+zict=2.0.0=pyhd3eb1b0_0
 zipp=3.7.0=pyhd3eb1b0_0
-zlib=1.2.11=h36c2ea0_1013
-zstd=1.5.2=ha95c52a_0
+zlib=1.2.11=h7f8727e_4
+zstd=1.5.0=ha4553b6_1
